<resources>
    <string name="app_name">My Application</string>
    <string name="str1">来了老弟!</string>
    <string name="tm_tittle">摄氏度转华氏度</string>
    <string name="tm_cul">换算</string>
    <string name="tm_hint">请输入摄氏度：</string>
    <string name="tm_dig">0123456789.</string>
    <string name="tm_wel">Hello World</string>
    <string name="btn_add3">point:+3</string>
    <string name="btn_add2">point:+2</string>
    <string name="btn_add1">point:+1</string>
    <string name="btn_re">reset</string>
    <string name="hl_hint">请输入人民币金额:</string>
    <string name="hl_dollor">美元</string>
    <string name="hl_ero">英镑</string>
    <string name="hl_hy">韩元</string>
    <string name="score">转到两队计分页面</string>
    <string name="config">设置汇率</string>
    <string name="config_save">保存</string>
    <string name="label_open_list">OpenList</string>
    <string name="RateCalc_inp">请输入要兑换的RMB金额：</string>
    <string name="RateCalc_title">币种</string>
    <string name="RateCalc_oup">兑换结果</string>
    <string name="rdo_home_label">首页</string>
    <string name="rdo_func_label">功能</string>
    <string name="rdo_setting_label">设置</string>
</resources>
