<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RateCalcActivity">

    <TextView
        android:id="@+id/RateCalc_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/RateCalc_title"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/RateCalc_inp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/RateCalc_inp"
        android:inputType="number"
        android:digits="@string/tm_dig"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/RateCalc_oup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/RateCalc_oup"
        android:textSize="35sp" />
</LinearLayout>