<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main2Activity">

    <TextView
        android:id="@+id/tittle"
        android:layout_margin="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tm_tittle"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/outp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/tm_wel"
        android:layout_marginBottom="10sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/inp"
        android:inputType="number"
        android:digits="@string/tm_dig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/tm_hint"
        android:layout_marginBottom="20sp"
        android:layout_marginHorizontal="50sp"
        android:gravity="center"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/tm_cul"
        android:layout_marginHorizontal="120sp"
        android:layout_marginBottom="30sp"
        android:textSize="25sp"/>

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="fitStart"
        app:srcCompat="@mipmap/tm_bg" />

</LinearLayout>